--- a/app/src/main/res/layout/adapter_blocks.xml
+++ b/app/src/main/res/layout/adapter_blocks.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.dut2.memorise.game.view.Block
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/block"
     android:layout_width="128dp"
-    android:layout_height="128dp"
-    android:gravity="center">
-
-    <com.dut2.memorise.game.view.Block
-        android:id="@+id/block"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+    android:layout_height="128dp" />
