--- a/app/src/main/res/layout/activity_game_options.xml
+++ b/app/src/main/res/layout/activity_game_options.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/splashscreenBackgroundColor">
@@ -127,7 +126,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/logo_menu"
             android:layout_width="match_parent"
             android:layout_height="140dp"
             app:srcCompat="@drawable/neumorphic_light_logo" />
