--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/splashscreenBackgroundColor">
@@ -22,7 +21,7 @@
         app:neumorph_backgroundColor="?attr/bgColorConnectionBtn" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/logo_menu"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
