--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowFullscreen">true</item>
+        <item name="android:windowEnterAnimation">@android:transition/fade</item>
+        <item name="android:windowExitAnimation">@android:transition/fade</item>
     </style>
 
     <style name="MemoriseBaseTheme.EditText" parent="MemoriseBaseTheme">
