--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -20,6 +20,21 @@
         app:layout_constraintTop_toTopOf="@+id/guideline5"
         app:neumorph_backgroundColor="?attr/bgColorConnectionBtn" />
 
+    <soup.neumorphism.NeumorphImageButton
+        android:id="@+id/helpButton"
+        style="@style/Widget.Neumorph.ImageButton"
+        android:layout_width="wrap_content"
+
+        android:layout_height="88dp"
+        android:layout_marginEnd="16dp"
+        android:padding="32dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_baseline_help_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline5"
+        app:neumorph_backgroundColor="?attr/bgColorConnectionBtn" />
+
     <ImageView
         android:id="@+id/logo_menu"
         android:layout_width="0dp"
